openturns/1.16/_sources/auto_functional_modeling/field_functions/plot_vertexvalue_function.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_auto_functional_modeling_field_functions_plot_vertexvalue_function.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_auto_functional_modeling_field_functions_plot_vertexvalue_function.py:


Vertex value function
=====================

A vertex value function
:math:`f_{vertexvalue}: \mathcal{D} \times \mathbb{R}^d \rightarrow \mathcal{D} \times \mathbb{R}^q` is a
particular field function that lets invariant the mesh of a field
and defined by a function :math:`h : \mathbb{R}^n \times \mathbb{R}^d  \rightarrow \mathbb{R}^q` such that:

.. math::
   \begin{aligned} f_{vertexvalue}(\underline{t}, \underline{x})=(\underline{t}, h(\underline{t},\underline{x}))\end{aligned}

Let's note that the input dimension of :math:`f_{vertexvalue}` still design the
dimension of :math:`\underline{x}` : :math:`d`. Its output dimension is equal to :math:`q`.

The creation of the *VertexValueFunction* object requires the
function :math:`h` and the integer :math:`n`: the dimension of the
vertices of the mesh :math:`\mathcal{M}`.

This example illustrates the creation of a field from the function
:math:`h:\mathbb{R}\times\mathbb{R}^2` such as:

.. math::
   \begin{aligned} 
      h(\underline{t}, \underline{x})=(t+x_1^2+x_2^2)
   \end{aligned}



.. code-block:: default

    from __future__ import print_function
    import openturns as ot
    import openturns.viewer as viewer
    from matplotlib import pylab as plt
    import math as m
    ot.Log.Show(ot.Log.NONE)








Create a mesh


.. code-block:: default

    N = 100
    mesh = ot.RegularGrid(0.0, 1.0, N)








Create the function that acts the values of the mesh


.. code-block:: default

    h = ot.SymbolicFunction(['t', 'x1', 'x2'],  ['t+x1^2+x2^2'])








Create the field function


.. code-block:: default

    f = ot.VertexValueFunction(h, mesh)








Evaluate f


.. code-block:: default

    inF = ot.Normal(2).getSample(N)
    outF = f(inF)

    # print input/output at first 10 mesh nodes
    txy = mesh.getVertices()
    txy.stack(inF)
    txy.stack(outF)
    txy[:10]





.. raw:: html

    <TABLE><TR><TD></TD><TH>t</TH><TH>X0</TH><TH>X1</TH><TH>y0</TH></TR>
    <TR><TH>0</TH><TD>0</TD><TD>0.0078462</TD><TD>0.5705849</TD><TD>0.3256287</TD></TR>
    <TR><TH>1</TH><TD>1</TD><TD>-1.771393</TD><TD>-1.594855</TD><TD>6.681396</TD></TR>
    <TR><TH>2</TH><TD>2</TD><TD>0.3392991</TD><TD>-0.6808893</TD><TD>2.578734</TD></TR>
    <TR><TH>3</TH><TD>3</TD><TD>-1.206364</TD><TD>0.7799273</TD><TD>5.0636</TD></TR>
    <TR><TH>4</TH><TD>4</TD><TD>-0.8871367</TD><TD>1.605837</TD><TD>7.365725</TD></TR>
    <TR><TH>5</TH><TD>5</TD><TD>-0.4954109</TD><TD>0.3742882</TD><TD>5.385524</TD></TR>
    <TR><TH>6</TH><TD>6</TD><TD>0.1838261</TD><TD>1.205241</TD><TD>7.486399</TD></TR>
    <TR><TH>7</TH><TD>7</TD><TD>1.555125</TD><TD>-1.034829</TD><TD>10.48929</TD></TR>
    <TR><TH>8</TH><TD>8</TD><TD>-0.9003734</TD><TD>0.5009439</TD><TD>9.061617</TD></TR>
    <TR><TH>9</TH><TD>9</TD><TD>1.820179</TD><TD>-0.1177598</TD><TD>12.32692</TD></TR>
    </TABLE>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.002 seconds)


.. _sphx_glr_download_auto_functional_modeling_field_functions_plot_vertexvalue_function.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_vertexvalue_function.py <plot_vertexvalue_function.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_vertexvalue_function.ipynb <plot_vertexvalue_function.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
